--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ $(document).ready(function($){
   </div>
   <div id="nav" class="menu-container">
     <ul id="menu-0" class="menu">
-      <li id="menu-item-1" class="menu-item-1"><a href="about.html">关于我</a></li>
+      <li id="menu-item-1" class="menu-item-1"><a href="index.html">关于我</a></li>
       <li id="menu-item-2" class="menu-item-2"><a href="banner.html">图片下载</a></li>
       <li id="menu-item-3" class="menu-item-3"><a href="time.html">碎言碎语</a></li>
       <li id="menu-item-4" class="menu-item-4"><a href="man.html">慢生活</a></li>
