--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ footer{margin-top: 0px;}
   <div class="mainContent">
     <div style="position: absolute;right: 40px;"> <img src="images/music.png" border="0">
       <p style="text-align: center;">
-        <audio src="images/lvxing.mp3" controls autoplay></audio>
+        <audio loop="true" controls autoplay>
+		<src="images/lvxing.mp3"></audio>
       </p>
     </div>
     <div class="blogitem">
