--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@ footer{margin-top: 0px;}
   <div class="mainContent">
     <div style="position: absolute;right: 40px;"> <img src="images/music.png" border="0">
       <p style="text-align: center;">
-        <audio loop="true" controls autoplay>
-		<src="images/lvxing.mp3"></audio>
+        <audio controls="conrtols" loop="true" autoplay="true"
+		src="images/lvxing.mp3">
+	</audio>
       </p>
     </div>
     <div class="blogitem">
